// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the dom like the snapshot when the props have default values. 1`] = `
<div>
  <div
    className="narrow-form-page login"
  >
    <form
      action={undefined}
      className="narrow-form"
      method="post"
    >
      <div
        className="row-fluid"
      >
        <h2>
          Welcome
        </h2>
        <p>
          This is the one-stop shop for your program. Check back often for updates!
        </p>
        <div
          className="language-select input-wrap"
        >
          <label
            className="control-label"
            htmlFor="languageSelect"
          />
          <select
            className="selectpicker gq-input"
            id="language-select"
            onChange={[Function]}
            value={undefined}
          >
            <option
              value="zh_CN"
            >
              Chinese [Simplified]
            </option>
            <option
              value="zh_TW"
            >
              Chinese [Traditional]
            </option>
            <option
              value="nl_NL"
            >
              Dutch [Netherlands]
            </option>
            <option
              value="en_GB"
            >
              English [British]
            </option>
            <option
              value="en_US"
            >
              English [U.S]
            </option>
            <option
              value="fr_CA"
            >
              French [Canadian]
            </option>
            <option
              value="fr_FR"
            >
              French [Europe]
            </option>
            <option
              value="de_DE"
            >
              German [Germany]
            </option>
            <option
              value="it_IT"
            >
              Italian [Italy]
            </option>
            <option
              value="ja_JP"
            >
              Japanese [Japan]
            </option>
            <option
              value="ar_AE"
            >
              Klingon
            </option>
            <option
              value="ko_KR"
            >
              Korean [South Korea]
            </option>
            <option
              value="pl_PL"
            >
              Polish [Poland]
            </option>
            <option
              value="pt_BR"
            >
              Portuguese [Brazil]
            </option>
            <option
              value="ru_RU"
            >
              Russian [Russia]
            </option>
            <option
              value="es_MX"
            >
              Spanish [Latin America]
            </option>
            <option
              value="es_ES"
            >
              Spanish [Spain]
            </option>
            <option
              value="th_TH"
            >
              Thai [Thailand]
            </option>
            <option
              value="tr_TR"
            >
              Turkish [Turkey]
            </option>
            <option
              value="vi_VN"
            >
              Vietnamese [Vietnam]
            </option>
          </select>
        </div>
        <div
          className="username-field login-form input-wrap focused"
        >
          <a
            className="forgot-link login-input-label"
            onClick={[Function]}
            tabIndex="5"
          >
            <span>
              login.password.reset.forgot_login_id
            </span>
          </a>
          <label
            className="control-label"
            htmlFor="formUserId"
          >
            <span>
              Login ID
            </span>
          </label>
          <span
            className="userId"
          >
            <span
              className="icon-info"
            />
            <span
              className="instructions"
            />
          </span>
          <input
            autoFocus={true}
            className="gq-input"
            id="formUserId"
            name="username"
            onChange={[Function]}
            onKeyPress={[Function]}
            tabIndex="1"
            type="text"
            value=""
          />
        </div>
        <div
          className="password-field input-wrap focused"
        >
          <a
            className="forgot-link login-input-label"
            onClick={[Function]}
            tabIndex="5"
          >
            <span>
              Forgot Password
            </span>
          </a>
          <label
            className="control-label"
            htmlFor="formPassword"
          >
            <span>
              Password
            </span>
          </label>
          <span
            className="eye"
            onClick={[Function]}
          >
            <svg
              className="icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.6,6.8l-0.9,1.1c1.9,1.5,2.9,3.6,2.9,4.1c0,1.3-3.4,6.7-10.6,6.7c-1.1,0-2.5-0.2-3.4-0.4l-0.3,1.4 c0.9,0.2,2.5,0.4,3.6,0.4c7.8,0,12-5.8,12-8.1C24,10.8,22.6,8.4,20.6,6.8z"
              />
              <path
                d="M21.6,1.4L18,5c-1.4-0.8-4-1.1-6-1.1C4.2,3.9,0,9.6,0,12c0,1.2,1.6,4.3,4.6,6.4l-3.3,3.3l1,1L22.6,2.4L21.6,1.4z M1.4,12 c0-1.3,3.4-6.7,10.6-6.7c1.6,0,3.7,0.3,4.9,0.8L15,8c-0.9-0.6-1.9-1-3-1c-2.8,0-5,2.2-5,5c0,1.1,0.4,2.1,1,3l-2.3,2.3 C2.7,15.5,1.4,12.6,1.4,12z M8.4,12c0-2,1.6-3.6,3.6-3.6c0.7,0,1.4,0.2,2,0.6l-5,5C8.6,13.4,8.4,12.7,8.4,12z"
              />
              <path
                d="M12,15.6c-0.2,0-0.3,0-0.5,0l-0.2,1.4c0.2,0,0.4,0,0.7,0c2.8,0,5-2.2,5-5c0-0.2,0-0.4,0-0.7l-1.4,0.2c0,0.2,0,0.3,0,0.5 C15.6,14,14,15.6,12,15.6z"
              />
            </svg>
          </span>
          <input
            className="gq-input"
            id="formPassword"
            name="password"
            onChange={[Function]}
            onKeyPress={[Function]}
            tabIndex="2"
            type="password"
            value=""
          />
        </div>
        <div
          className="activation"
        >
          <p>
            No Password?
             
            <a
              onClick={[Function]}
            >
              Activate your account
            </a>
          </p>
        </div>
        <button
          className="gq-btn disabled btn btn-block btn-primary form-action-btn"
          onClick={[Function]}
          tabIndex={3}
          type="button"
        >
          <span>
            Log In
          </span>
        </button>
      </div>
    </form>
    <div
      className="theme-image"
    />
  </div>
</div>
`;

exports[`renders the dom like the snapshot when the props have default values. 2`] = `
<div>
  <div
    className="narrow-form-page login"
  >
    <form
      action={undefined}
      className="narrow-form"
      method="post"
    >
      <div
        className="row-fluid"
      >
        <h2>
          Welcome
        </h2>
        <p>
          This is the one-stop shop for your program. Check back often for updates!
        </p>
        <p>
          paragraph 2!
        </p>
        <div
          className="hide language-select input-wrap"
        >
          <label
            className="control-label"
            htmlFor="languageSelect"
          />
          <select
            className="selectpicker gq-input"
            id="language-select"
            onChange={[Function]}
            value={undefined}
          />
        </div>
        <div
          className="username-field login-form input-wrap focused"
        >
          <a
            className="forgot-link login-input-label"
            onClick={[Function]}
            tabIndex="5"
          >
            <span>
              login.password.reset.forgot_login_id
            </span>
          </a>
          <label
            className="control-label"
            htmlFor="formUserId"
          >
            <span>
              Login ID
            </span>
          </label>
          <span
            className="userId"
          >
            <span
              className="icon-info"
            />
            <span
              className="instructions"
            />
          </span>
          <input
            autoFocus={true}
            className="gq-input"
            id="formUserId"
            name="username"
            onChange={[Function]}
            onKeyPress={[Function]}
            tabIndex="1"
            type="text"
            value=""
          />
        </div>
        <div
          className="password-field input-wrap focused"
        >
          <a
            className="forgot-link login-input-label"
            onClick={[Function]}
            tabIndex="5"
          >
            <span>
              Forgot Password
            </span>
          </a>
          <label
            className="control-label"
            htmlFor="formPassword"
          >
            <span>
              Password
            </span>
          </label>
          <span
            className="eye"
            onClick={[Function]}
          >
            <svg
              className="icon"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.6,6.8l-0.9,1.1c1.9,1.5,2.9,3.6,2.9,4.1c0,1.3-3.4,6.7-10.6,6.7c-1.1,0-2.5-0.2-3.4-0.4l-0.3,1.4 c0.9,0.2,2.5,0.4,3.6,0.4c7.8,0,12-5.8,12-8.1C24,10.8,22.6,8.4,20.6,6.8z"
              />
              <path
                d="M21.6,1.4L18,5c-1.4-0.8-4-1.1-6-1.1C4.2,3.9,0,9.6,0,12c0,1.2,1.6,4.3,4.6,6.4l-3.3,3.3l1,1L22.6,2.4L21.6,1.4z M1.4,12 c0-1.3,3.4-6.7,10.6-6.7c1.6,0,3.7,0.3,4.9,0.8L15,8c-0.9-0.6-1.9-1-3-1c-2.8,0-5,2.2-5,5c0,1.1,0.4,2.1,1,3l-2.3,2.3 C2.7,15.5,1.4,12.6,1.4,12z M8.4,12c0-2,1.6-3.6,3.6-3.6c0.7,0,1.4,0.2,2,0.6l-5,5C8.6,13.4,8.4,12.7,8.4,12z"
              />
              <path
                d="M12,15.6c-0.2,0-0.3,0-0.5,0l-0.2,1.4c0.2,0,0.4,0,0.7,0c2.8,0,5-2.2,5-5c0-0.2,0-0.4,0-0.7l-1.4,0.2c0,0.2,0,0.3,0,0.5 C15.6,14,14,15.6,12,15.6z"
              />
            </svg>
          </span>
          <input
            className="gq-input"
            id="formPassword"
            name="password"
            onChange={[Function]}
            onKeyPress={[Function]}
            tabIndex="2"
            type="password"
            value=""
          />
        </div>
        <div
          className="activation"
        >
          <p>
            No Password?
             
            <a
              onClick={[Function]}
            >
              Activate your account
            </a>
          </p>
        </div>
        <button
          className="gq-btn disabled btn btn-block btn-primary form-action-btn"
          onClick={[Function]}
          tabIndex={3}
          type="button"
        >
          <span>
            Log In
          </span>
        </button>
      </div>
    </form>
    <div
      className="theme-image"
    />
  </div>
</div>
`;
